UtahLiveDataTest/src/objects/MSPFinancialBatch__c.object
<CustomObject>
    <fields>
        <fullName>AttachmentURL__c</fullName>
        <label>AttachmentURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AwardCreationApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Creation Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MSP_Financial_Batchs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BatchApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MSP_Financial_Batchs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BatchId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalFileName__c</fullName>
        <label>External File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HideUploadBtn__c</fullName>
        <formula>TEXT(Status__c) != &apos;Created&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideUploadBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideViewBtn__c</fullName>
        <formula>OR(Text(Status__c) = &apos;Created&apos;, TEXT(Status__c) = &apos;Uploaded&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideViewBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Processing Approve</fullName>
                </value>
                <value>
                    <fullName>Processing Active</fullName>
                </value>
                <value>
                    <fullName>Awards Created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UploadedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Uploaded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MSP_Financial_Batchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UploadedDatetime__c</fullName>
        <label>Uploaded Datetime</label>
        <type>DateTime</type>
    </fields>
    <label>MSP Financial Batch</label>
    <nameField>
        <label>MSP Financial Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSP Financial Batchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>